[package]
name = "dynamic-plan-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rayon = "1.5"
serde = "1.0"
serde_yaml = "0.8"
typetag = "0.1"

[dev-dependencies]
env_logger = "0.9"
