[package]
name = "dynamic_plan_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamic_plan_tree_derive = { path = "../dynamic_plan_tree_derive" }
enum_dispatch = "0.3"
rayon = "1.5"
serde = {version = "1.0", features = ["derive"]}
serde-value = "0.7"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
serde-reflection = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
