[package]
name = "dynamic_plan_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_cast = { path = "../enum_cast" }
enum_dispatch = "0.3"
rayon = { version = "1.5", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-value = "0.7"
tracing = "0.1"

[dev-dependencies]
serde_json = "1.0"
serde-reflection = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
